--- a/tasks/awx_install.yml
+++ b/tasks/awx_install.yml
@@ -36,6 +36,14 @@
   command: "{{ item }}"
   loop: ['pip3 install --upgrade pip', 'pip install --upgrade pip', 'pip3 install docker-compose', 'pip3 install docker', 'pip install docker-compose']
 
+- name: change the docker-compose location
+  ini_file:
+    path: '{{ awx_repo_dir }}/installer/inventory'
+    section: all:vars
+    option: docker_compose_dir
+    value: '/root/.awx/awxcompose'
+    no_extra_spaces: yes
+
 - name: Run the AWX installation playbook.
   command: "ansible-playbook -i {{ awx_repo_dir }}/installer/inventory {{ awx_repo_dir }}/installer/install.yml -e postgres_data_dir={{ postgres_data_dir }}"
   args:
